<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/textNote"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/addNotaTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/newNoteTitle" />

    <EditText
        android:id="@+id/addNotaDescricao"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"
        android:gravity="top"
        android:hint="@string/newNoteDescri" />

    <Button
        android:id="@+id/btGuardarNota"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/btSave"
        app:backgroundTint="#3D7887"
        android:onClick="btAddNotaGuardar"/>

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/btCancel"
        android:onClick="btAddNotaCancelar"
        app:backgroundTint="#C14242" />
</LinearLayout>