<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    tools:context=".AddReporte">

    <EditText
        android:id="@+id/reportTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/reportTipo"
        android:minHeight="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reportDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/reportDesc"
        android:minHeight="16dp"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btaddReporte"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="NovoRep"
        android:text="@string/btSave"
        app:backgroundTint="#43A047" />

    <Button
        android:id="@+id/btCancelarReporte"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="cancelReporte"
        android:text="@string/btCancel"
        app:backgroundTint="@color/design_default_color_error" />
    </LinearLayout>

</LinearLayout>