<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:justificationMode="inter_word"
            android:layout_marginHorizontal="50dp"
            android:text="@string/textInfoAbout"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/textViewCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:textAlignment="center"
            android:justificationMode="inter_word"
            android:layout_marginHorizontal="50dp"
            android:text="@string/textInfoAboutCreator"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btReturnAbout"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:onClick="onClickAboutReturn"
            android:text="@string/btVoltar"
            android:textSize="20dp"
            app:backgroundTint="#3D7887" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>